<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:background="@color/main_background_color"
    tools:context=".game">

    <TextView
        android:id="@+id/gameTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_timer"
        android:textSize="50sp"
        android:textColor="@color/team_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <LinearLayout
        android:id="@+id/linL_forbiddenWords"
        android:layout_width="341dp"
        android:layout_height="326dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/words_border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTimer">

        <TextView
            android:id="@+id/goalWord"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/default_word"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fw_1"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/default_fw1"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fw_2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/default_fw2"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fw_3"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/default_fw3"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fw_4"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/default_fw4"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fw_5"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/default_fw5"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_stopNstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title_start_button"
        android:text="@string/default_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linL_forbiddenWords"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/btn_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF0000"
        android:text="@string/skip_word"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stopNstart"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2FFF00"
        android:text="@string/positive_word"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toEndOf="@+id/btn_negative"
        app:layout_constraintTop_toBottomOf="@+id/btn_stopNstart"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>